--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "getconfig": "2.1.0",
     "node-uuid": "1.2.0",
     "socket.io": "1.3.7",
-    "yetify": "0.0.1"
-    "mysql": "2.10.2",
+    "yetify": "0.0.1",
+    "mysql": "2.10.2"
   },
   "main": "server.js",
   "repository": {
