--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "getconfig": "2.1.0",
     "node-uuid": "1.2.0",
     "socket.io": "1.3.7",
-    "yetify": "0.0.1"
+    "engine.io-parser": "1.2.2"
   },
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:andyet/signal-master.git"
+    "url": "git@github.com:yfix/signalmaster.git"
   },
   "devDependencies": {
     "socket.io-client": "0.9.16",
