--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "getconfig": "2.1.0",
     "node-uuid": "1.2.0",
     "socket.io": "1.3.7",
-    "engine.io-parser": "1.2.2"
+    "engine.io-parser": "1.2.2",
+    "getconfig": "2.2.0"
   },
   "main": "server.js",
   "repository": {
