--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Simple signaling server for SimpleWebRTC",
   "version": "0.2.3",
   "dependencies": {
+    "async": "1.5.2",
     "getconfig": "2.1.0",
     "node-uuid": "1.2.0",
     "socket.io": "1.3.7",
@@ -12,7 +13,7 @@
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:andyet/signal-master.git"
+    "url": "git@github.com:yfix/signal-master.git"
   },
   "devDependencies": {
     "socket.io-client": "0.9.16",
