--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "description": "Simple signaling server for SimpleWebRTC",
   "version": "0.2.3",
   "dependencies": {
-    "async": "1.5.2",
     "getconfig": "2.1.0",
-    "node-uuid": "1.2.0",
     "socket.io": "1.3.7",
+    "socket.io-redis": "1.0.0",
     "engine.io-parser": "1.2.2",
     "getconfig": "2.2.0",
     "yetify": "0.0.1",
