--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "getconfig": "2.1.0",
     "node-uuid": "1.2.0",
     "socket.io": "1.3.7",
-    "socket.io-redis": "1.0.0",    
     "engine.io-parser": "1.2.2",
     "getconfig": "2.2.0",
     "yetify": "0.0.1",
-    "mysql": "2.10.2",
-    "lodash": "4.5.1"
+    "lodash": "4.5.1",
+    "redis": "2.5.1",
   },
   "main": "server.js",
   "repository": {
